fix: correct overflow bug

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 // COLORS
@@ -18,31 +19,26 @@ GRID LAYOUT
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto;
-  grid-template-areas: 'text cards cards';
+  max-width: 100%;
+  grid-template-columns: 1fr 2fr;
   grid-gap: 32px;
   margin: 96px 15px 0px 15px;
-}
-@media screen and (max-width: 768px) {
-  .grid-container {
-    grid-template-columns: 1fr;
-    grid-template-areas: none;
-  }
+  // overflow: hidden;
 }
 
 .people-cont {
-  grid-area: cards;
+  display: grid;
+  max-width: 100%;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 32px;
+  // overflow: hidden;
 }
-
-// @media (max-width: 768px) {
-//   .grid-container {
-//     grid-template-columns: 1fr;
-//   }
-//   .people-cont {
-//     grid-template-columns: 1fr;
-//   }
-// }
+@media screen and (max-width: 768px) {
+  .grid-container,
+  .people-cont {
+    grid-template-columns: 100%;
+  }
+}
 
 /**********
 TEXT
@@ -73,13 +69,11 @@ TEAM SECTION
 CARD
 ***********/
 .card {
-  max-width: 100%;
   display: flex;
   flex-direction: column;
-  // max-width: 200px;
   border: $light-grey solid 1px;
-  border-inline: true;
   border-radius: 8px;
+  max-width: 100%;
   img {
     border-radius: 8px;
   }
@@ -88,14 +82,6 @@ CARD
 .card-text-cont {
   margin: 16px 16px 32px 16px;
 }
-
-// .grid-container:nth-child(even) {
-//   grid-column: 2 / 3;
-// }
-
-// .grid-container:nth-child(odd) {
-//   grid-column: 3 / 4;
-// }
 
 /***********
 TEXT
